<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/music_photo"
        android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/song_name"
            android:layout_toEndOf="@+id/imageMV"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:layout_marginEnd="50dp"
            />
        <TextView
            android:id="@+id/songArtist"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/artist_name"
            android:layout_toEndOf="@+id/imageMV"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textSize="11sp"
            android:gravity="center_vertical"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/songDuration"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/start_tv"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:background="@android:color/transparent"/>

</RelativeLayout>