<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                tools:ignore="UselessParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/shuffleBtnMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/shuffle_btn"
                        app:tint="@color/black"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/shuffle_icon"
                        android:text="@string/shuffle_btn"
                        android:textColor="@color/black"
                        android:textAllCaps="false"/>
                    <Button
                        android:id="@+id/favouriteBtnMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/favourites_btn"
                        app:tint="@color/black"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/favorite_filled_icon"
                        android:text="@string/favourites_btn"
                        android:textColor="@color/black"
                        android:textAllCaps="false"/>
                    <Button
                        android:id="@+id/playlistBtnMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/playlist_btn"
                        app:tint="@color/black"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/my_playlist_icon"
                        android:text="@string/playlist_btn"
                        android:textColor="@color/black"
                        android:textAllCaps="false"/>
<!--                    <Button-->
<!--                        android:id="@+id/queBtnMain"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:contentDescription="@string/play_next_btn"-->
<!--                        app:tint="@color/black"-->
<!--                        style="@style/Widget.AppCompat.Button.Borderless"-->
<!--                        android:drawableTop="@drawable/play_next_icon"-->
<!--                        android:text="@string/play_next_btn"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:textAllCaps="false"/>-->
                </LinearLayout>

                <TextView
                    android:id="@+id/totalFiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_files"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/musicRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"/>
            </LinearLayout>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:name="com.kdsf.mp.NowPlaying"
                tools:layout="@layout/fragment_now_playing" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>